# yadro-test-work

./: .gitignore  CMakeLists.txt  README.md  config.txt  main.cpp
src/: config_parser.cpp  config_parser.h  file_tape.cpp  file_tape.h  tape.h  tape_algo.cpp  tape_algo.h
